tests/fixtures/pass/isset.php
<?php

isset( $a );
isset(
	$a
);
