tests/fixtures/fail/isset.php
<?php

isset( $a, $b );
isset(
	$a,
	$b
);
